# SUBGNN

./: .gitignore  README.md  cora-model.pth  cora_pipeline.py  exact_subgraph_match.ipynb  main.py  new_model.ipynb  requirements.txt  script.py  single_node_search.py  test-pipeline.py
benchmarks/: README  README.md  isonet_mutag_vf2.py  result_corpus800_test75.csv  vf2.py  vf3.py
benchmarks/datasets/: read_dataset.py
benchmarks/glasgow-subgraph-solver/: README.md  run-tests.bash
models/: cora-model-jigsaw-embedding-corruption.pth  cora-model-jigsaw.pth  jigsaw_labels.ipynb
modified_glasgow/: CMakeLists.txt  README.md  __init__.py  glasgow_subgraph_solver.py  real_example.py  start_from_vertex_example.py  test_wrapper.py
src/: config.py  data_processing.py  evaluate.py  model.py  query_generator.py  search_executor.py  utils.py
vf3py/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.py  conanfile.txt  simple_test.py  test.py  test_complex_start_node.py
vf3py/docs/: build_docs.sh  conf.py  index.rst
vf3py/docs/guides/: compile.rst  design.rst  install.rst  purpose.rst  use.rst
vf3py/docs/source/: modules.rst  vf3py.rst  vf3py.test.rst
vf3py/release_assemble/: release_assemble.py
vf3py/release_assemble/tests/: basic_graphs.py  edge_test.py  mol_isoms.py  postbuild_tests.py
vf3py/release_assemble/vf3_release/: create_pypi_package.py  setup.py  setup_pypi.py
vf3py/release_assemble/vf3_release/sdist_template/{package}-{version}/: PKG-INFO
vf3py/release_assemble/vf3_release/vf3py/: __init__.py
vf3py/vf3/: ARGEdit.hpp  MatchingEngine.hpp  Options.hpp  ProbabilityStrategy.hpp  State.hpp  VF2State.hpp  VF2SubState.hpp  VF3State.hpp  VF3SubState.hpp  VFLib.h  main.cpp
vf3py/vf3/loaders/: EdgeStreamARGLoader.hpp  FastStreamARGLoader.hpp
vf3py/vf3/parallel/: CloneableVF3ParallelSubState.hpp  CloneableVF3SubState.hpp  ParallelMatchingEngine.hpp  Stack.hpp
(+903 files in other folders)
